<resources>
    <string name="app_name" translatable="false">Game List</string>
    <string name="game_list">Game List</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="add_new_game">Add new game</string>
    <string name="players">Players</string>
    <string name="cost">Cost</string>
    <string name="free_to_play">Free to play</string>
    <string name="rating">Rating</string>
    <string name="game_info">Game Info</string>
    <string name="count_players">Count players</string>
    <string name="failed_to_play_trailer">Failed to play trailer! Sorry but there is not trailer!</string>
    <string name="trailer_not_found">Trailer not found</string>
    <string name="application_settings">Settings</string>
    <string name="game_filters">Game filters</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="language">Language</string>
    <string name="font_size">Font size</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create_game">Create Game</string>
    <string name="restore_settings">Restore Settings</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="billions" translatable="false">b</string>
    <string name="millions" translatable="false">m</string>
    <string name="million" translatable="false">m</string>
    <string name="thousands" translatable="false">k</string>
    <string name="thousand" translatable="false">k</string>
    <string name="billion" translatable="false">b</string>
    <string name="font_family">Font Family</string>
</resources>
