<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AddGame">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/add_game_img_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/add_new_game" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/add_game_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/add_game_edt_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rating"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/add_game_edt_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cost"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/add_game_edt_count_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/count_players"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fadeScrollbars="true"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_game_btn_add_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/style_button_background"
            android:textColor="@drawable/style_button_text_color"
            android:padding="10dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/create_game" />

    </LinearLayout>

</LinearLayout>