<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GameList"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctnr_top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/img_btn_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00000000"
            android:contentDescription="@string/settings"
            android:padding="10dp"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/gear" />

        <ImageButton
            android:id="@+id/img_btn_filters"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00000000"
            android:contentDescription="@string/filter"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_btn_settings"
            android:scaleType="centerInside"

            android:src="@drawable/magnifier" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/game_list"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/img_btn_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00000000"
            android:contentDescription="@string/add_new_game"
            android:padding="10dp"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/plus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/ctnr_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ctnr_list_v_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

</LinearLayout>