<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ctnr_game_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_item_logo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_weight="0"
        android:scaleType="centerCrop"
        android:src="@drawable/default_logo" />

    <TableLayout
        android:id="@+id/ctnr_item_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/txt_val_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="Dota 2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TableRow
            android:id="@+id/tr_count_players"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txt_count_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/players"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/txt_val_count_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_cost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="1dp"
            android:paddingBottom="1dp" >

            <TextView
                android:id="@+id/txt_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/txt_val_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_to_play" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_rating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="1dp"
            android:paddingBottom="1dp" >

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/txt_val_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

</LinearLayout>

