<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.GameFilters">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/game_filters_img_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/game_filters_txt_nav_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/game_filters" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/game_filters_txt_count_players"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/count_players" />

                    <TextView
                        android:id="@+id/game_filters_txt_val_count_players"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="10 - 20k"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/game_filters_sb_min_count_players"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"/>

                <SeekBar
                    android:id="@+id/game_filters_sb_max_count_players"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:progress="100"
                    android:paddingBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/game_filters_txt_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/cost" />

                <TextView
                    android:id="@+id/game_filters_txt_val_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="0 - 10k"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/game_filters_sb_min_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp" />
            <SeekBar
                android:id="@+id/game_filters_sb_max_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:progress="100"
                android:paddingBottom="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/game_filters_txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/game_filters_txt_val_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:text="0 - 5"
                android:paddingStart="10dp"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/game_filters_sb_min_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp" />

        <SeekBar
            android:id="@+id/game_filters_sb_max_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:progress="100"
            android:paddingBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/game_filters_btn_apply_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/style_button_background"
            android:textColor="@drawable/style_button_text_color"
            android:padding="10dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/apply_filters" />

        <Button
            android:id="@+id/game_filters_btn_clear_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/style_button_background"
            android:textColor="@drawable/style_button_text_color"
            android:padding="10dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/clear_filters" />

    </LinearLayout>

</LinearLayout>