<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="top"
android:orientation="vertical"
tools:context=".fragments.GameDetails">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="50dp" >

    <ImageButton
        android:id="@+id/game_details_img_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:cropToPadding="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/game_info" />

</androidx.constraintlayout.widget.ConstraintLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_logo" />

            <LinearLayout
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_logo"
                app:layout_constraintStart_toStartOf="@id/img_logo">

                <TextView
                    android:id="@+id/game_details_txt_val_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Dota 2"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/game_details_txt_watch_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Watch trailer"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/count_players" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/cost" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Lorem ipsum set dollar emmet."
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>

</LinearLayout>